--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 </iframe>
 
 <script>
-    var redirectUrl = "https://sites.google.com/guru.sma.belajar.id/
-ilmubykkulsum"; // Ganti dengan URL tujuan Anda
+    var redirectUrl = "https://sites.google.com/guru.sma.belajar.id/ilmubykkulsum"; // Ganti dengan URL tujuan Anda
 
     // Memuat YouTube Iframe API
     var tag = document.createElement('script');
