--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <iframe id="videoPlayer" width="100%" height="100%" 
-        src="https://www.youtube.com/embed/lBSXYUhD3Cc?si=bejA4EvIiNZaEV-1&autoplay=1&fs=1&rel=0&showinfo=0&modestbranding=1"
+        src="https://www.youtube.com/embed/lBSXYUhD3Cc?si=bejA4EvIiNZaEV-1&autoplay=1&mute=1&fs=1&rel=0&showinfo=0&modestbranding=1"
         frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
     </iframe>
 
