--- a/index.html
+++ b/index.html
@@ -17,47 +17,23 @@
     </style>
 </head>
 <body>
-    <div id="videoContainer"></div>
+    <div id="videoContainer">
+        <iframe 
+            src="https://www.youtube.com/embed/lBSXYUhD3Cc?autoplay=1&mute=1&controls=0&rel=0&showinfo=0"
+            width="100%" 
+            height="100%" 
+            frameborder="0" 
+            allow="autoplay; encrypted-media" 
+            allowfullscreen>
+        </iframe>
+    </div>
 
     <script>
-        // Load the IFrame Player API code asynchronously
-        var tag = document.createElement('script');
-        tag.src = "https://www.youtube.com/iframe_api";
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-        // Create a YouTube player
-        var player;
-        function onYouTubeIframeAPIReady() {
-            player = new YT.Player('videoContainer', {
-                height: '100%',
-                width: '100%',
-                videoId: 'lBSXYUhD3Cc',
-                playerVars: {
-                    'autoplay': 1,
-                    'mute': 1,
-                    'controls': 0,
-                    'rel': 0,
-                    'showinfo': 0
-                },
-                events: {
-                    'onReady': onPlayerReady,
-                    'onStateChange': onPlayerStateChange
-                }
-            });
-        }
-
-        // Function to handle when the player is ready
-        function onPlayerReady(event) {
-            event.target.playVideo();
-        }
-
-        // Function to handle video state changes
-        function onPlayerStateChange(event) {
-            if (event.data === YT.PlayerState.ENDED) {
-                window.location.href = "https://sites.google.com/guru.sma.belajar.id/ilmubykkulsum";
-            }
-        }
+        // Redirect after a specific time (update duration if necessary)
+        var videoDuration = 2760; // Duration in seconds (adjust if needed)
+        setTimeout(function(){
+            window.location.href = "https://sites.google.com/guru.sma.belajar.id/ilmubykkulsum";
+        }, videoDuration * 1000); // Convert seconds to milliseconds
     </script>
 </body>
 </html>
