--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
             height: 100%;
             margin: 0;
             overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: black; /* Background color for better visibility */
         }
         #videoContainer {
-            position: relative;
             width: 100%;
             height: 100%;
         }
@@ -24,19 +19,13 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            padding: 15px 30px;
-            font-size: 18px;
+            padding: 20px;
+            font-size: 20px;
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
             border: none;
             cursor: pointer;
             z-index: 10;
-            border-radius: 5px; /* Rounded corners for the button */
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none; /* Remove border for a cleaner look */
         }
     </style>
 </head>
@@ -45,6 +34,9 @@
         <iframe 
             id="videoFrame"
             src="https://www.youtube.com/embed/lBSXYUhD3Cc?autoplay=0&controls=0&rel=0&showinfo=0"
+            width="100%" 
+            height="100%" 
+            frameborder="0" 
             allow="encrypted-media" 
             allowfullscreen>
         </iframe>
