--- a/index.html
+++ b/index.html
@@ -14,43 +14,21 @@
             width: 100%;
             height: 100%;
         }
-        #playButton {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 20px;
-            font-size: 20px;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            border: none;
-            cursor: pointer;
-            z-index: 10;
-        }
     </style>
 </head>
 <body>
     <div id="videoContainer">
         <iframe 
-            id="videoFrame"
-            src="https://www.youtube.com/embed/lBSXYUhD3Cc?autoplay=0&controls=0&rel=0&showinfo=0"
+            src="https://www.youtube.com/embed/lBSXYUhD3Cc?autoplay=1&controls=0&rel=0&showinfo=0"
             width="100%" 
             height="100%" 
             frameborder="0" 
-            allow="encrypted-media" 
+            allow="autoplay; encrypted-media" 
             allowfullscreen>
         </iframe>
-        <button id="playButton">Play Video</button>
     </div>
 
     <script>
-        // Play video on button click
-        document.getElementById('playButton').onclick = function() {
-            var videoFrame = document.getElementById('videoFrame');
-            videoFrame.src += "&autoplay=1"; // Start autoplay on button click
-            this.style.display = 'none'; // Hide the button after clicking
-        };
-
         // Redirect after a specific time (update duration if necessary)
         var videoDuration = 2760; // Duration in seconds (adjust if needed)
         setTimeout(function(){
