--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div id="videoContainer">
         <iframe 
-            src="https://www.youtube.com/embed/lBSXYUhD3Cc?autoplay=1&controls=0&rel=0&showinfo=0"
+            src="https://www.youtube.com/embed/lBSXYUhD3Cc?autoplay=1&mute=1&controls=0&rel=0&showinfo=0"
             width="100%" 
             height="100%" 
             frameborder="0" 
