--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div id="videoContainer">
         <iframe 
-            src="https://drive.google.com/uc?id=1s5H2BFOdTcaIv9kKCPCzJO7rtyv763HT&autoplay=1"
+            src="https://www.youtube.com/embed/lBSXYUhD3Cc?autoplay=1&controls=0&rel=0&showinfo=0"
             width="100%" 
             height="100%" 
             frameborder="0" 
